# chaser

./: .gitignore  Cargo.toml  PR_DOCUMENT.md  paths.csv  paths.json  paths.toml  paths.yaml  readme.md  readme_zh-hant.md  target_test.csv  target_test.json  target_test.toml  target_test.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  coverage.yml  release.yml  update-deps.yml
locales/: en.yaml  zh-cn.yaml
src/: cli.rs  config.rs  i18n.rs  lib.rs  main.rs  path_sync.rs  target_files.rs
tests/: file_monitoring_tests.rs  integration_tests.rs  performance_tests.rs
