[package]
name = "chaser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/chaser"
description = "An automated file path synchronization tool that updates changed paths in configuration files in real time."

[dependencies]
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10"
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0"
anyhow = "1.0"
sys-locale = "0.3"
owo-colors = "4.0"
