[package]
name = "chaser"
version = "0.1.0"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An automated file path synchronization tool that updates changed paths in configuration files in real time."
homepage = "https://github.com/Bli-AIk/chaser"
repository = "https://github.com/Bli-AIk/chaser"
documentation = "https://docs.rs/chaser"
readme = "readme.md"
keywords = ["file-monitor", "path-sync", "automation", "configuration", "cli"]
categories = ["command-line-utilities", "filesystem", "config"]
exclude = [
    "test_files/*",
    "test_scenario/*", 
    "target_test.*",
    ".github/*",
    "*.svg"
]

[[bin]]
name = "chaser"
path = "src/main.rs"

[lib]
name = "chaser"
path = "src/lib.rs"

[dependencies]
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10"
toml = "0.9"
csv = "1.3"
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0"
anyhow = "1.0"
sys-locale = "0.3"
owo-colors = "4.0"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
